// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ContextCard formats the last_activity_at properly 1`] = `
<Screen
  navBarStyle="dark"
  rightBarButtons={
    Array [
      Object {
        "accessibilityLabel": "Email Contact",
        "action": [Function],
        "image": Object {
          "testUri": "../../../src/images/mail-small.png",
        },
        "testID": "context-card.email-contact",
      },
    ]
  }
  subtitle="Learn React Native"
  title="Donald Trump"
>
  <list>
    <item>
      <TouchableHighlight
        accessibilityLabel={undefined}
        accessibilityTraits={
          Array [
            "button",
          ]
        }
        onPress={[Function]}
        style={
          Array [
            undefined,
            Object {
              "borderBottomColor": "#C7CDD1",
              "borderBottomWidth": 0.5,
            },
          ]
        }
        testID="user-submission-row.cell-1"
      >
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "backgroundColor": "white",
                "flex": 1,
                "flexDirection": "row",
                "minHeight": 54,
                "paddingBottom": 12,
                "paddingLeft": 16,
                "paddingRight": 16,
                "paddingTop": 12,
              },
              Object {
                "backgroundColor": "white",
              },
            ]
          }
        >
          <View
            style={
              Object {
                "alignSelf": "flex-start",
              }
            }
            testID="user-submission-row-icon-published-1.icon-img"
          >
            <View
              accessibilityLabel="Published"
              style={
                Object {
                  "alignItems": "center",
                  "flex": 0,
                }
              }
            >
              <Image
                resizeMode="cover"
                source={
                  Object {
                    "testUri": "../../../src/images/course/Assignment.png",
                  }
                }
                style={
                  Array [
                    false,
                    Object {
                      "minHeight": 24,
                      "minWidth": 24,
                    },
                  ]
                }
                testID="access-icon-image"
              />
              <View
                style={
                  Object {
                    "alignItems": "center",
                    "backgroundColor": "white",
                    "borderRadius": 8,
                    "bottom": -6,
                    "height": 16,
                    "justifyContent": "center",
                    "position": "absolute",
                    "right": -5,
                    "width": 16,
                  }
                }
              >
                <Image
                  source={
                    Object {
                      "testUri": "../../../src/images/publish-small.png",
                    }
                  }
                  style={
                    Object {
                      "height": 12,
                      "tintColor": "#00AC18",
                      "width": 12,
                    }
                  }
                  testID="access-icon-icon"
                />
              </View>
            </View>
          </View>
          <View
            style={
              Array [
                Object {
                  "flex": 1,
                  "flexDirection": "column",
                  "justifyContent": "center",
                },
                Object {
                  "marginLeft": 12,
                },
              ]
            }
          >
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              numberOfLines={2}
              style={
                Array [
                  Object {
                    "fontFamily": ".SFUIDisplay",
                  },
                  Object {
                    "color": "#2D3B45",
                    "fontSize": 16,
                  },
                  Array [
                    Object {
                      "fontWeight": "600",
                    },
                  ],
                  Object {
                    "fontFamily": ".SFUIDisplay-semibold",
                  },
                ]
              }
            >
              learn to write code
            </Text>
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Array [
                  Object {
                    "fontFamily": ".SFUIDisplay",
                  },
                  Object {
                    "color": "#2D3B45",
                    "fontSize": 16,
                  },
                  Array [
                    Object {
                      "fontSize": 14,
                      "paddingTop": 2,
                    },
                    Object {
                      "marginBottom": 8,
                    },
                    Object {
                      "color": "#8B969E",
                    },
                  ],
                  Object {
                    "fontFamily": ".SFUIDisplay",
                  },
                ]
              }
            >
              Not Submitted
            </Text>
          </View>
        </View>
      </TouchableHighlight>
    </item>
  </list>
</Screen>
`;

exports[`ContextCard renders 1`] = `
<Screen
  navBarStyle="dark"
  rightBarButtons={
    Array [
      Object {
        "accessibilityLabel": "Email Contact",
        "action": [Function],
        "image": Object {
          "testUri": "../../../src/images/mail-small.png",
        },
        "testID": "context-card.email-contact",
      },
    ]
  }
  subtitle="Learn React Native"
  title="Donald Trump"
>
  <list>
    <item>
      <TouchableHighlight
        accessibilityLabel={undefined}
        accessibilityTraits={
          Array [
            "button",
          ]
        }
        onPress={[Function]}
        style={
          Array [
            undefined,
            Object {
              "borderBottomColor": "#C7CDD1",
              "borderBottomWidth": 0.5,
            },
          ]
        }
        testID="user-submission-row.cell-1"
      >
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "backgroundColor": "white",
                "flex": 1,
                "flexDirection": "row",
                "minHeight": 54,
                "paddingBottom": 12,
                "paddingLeft": 16,
                "paddingRight": 16,
                "paddingTop": 12,
              },
              Object {
                "backgroundColor": "white",
              },
            ]
          }
        >
          <View
            style={
              Object {
                "alignSelf": "flex-start",
              }
            }
            testID="user-submission-row-icon-published-1.icon-img"
          >
            <View
              accessibilityLabel="Published"
              style={
                Object {
                  "alignItems": "center",
                  "flex": 0,
                }
              }
            >
              <Image
                resizeMode="cover"
                source={
                  Object {
                    "testUri": "../../../src/images/course/Assignment.png",
                  }
                }
                style={
                  Array [
                    false,
                    Object {
                      "minHeight": 24,
                      "minWidth": 24,
                    },
                  ]
                }
                testID="access-icon-image"
              />
              <View
                style={
                  Object {
                    "alignItems": "center",
                    "backgroundColor": "white",
                    "borderRadius": 8,
                    "bottom": -6,
                    "height": 16,
                    "justifyContent": "center",
                    "position": "absolute",
                    "right": -5,
                    "width": 16,
                  }
                }
              >
                <Image
                  source={
                    Object {
                      "testUri": "../../../src/images/publish-small.png",
                    }
                  }
                  style={
                    Object {
                      "height": 12,
                      "tintColor": "#00AC18",
                      "width": 12,
                    }
                  }
                  testID="access-icon-icon"
                />
              </View>
            </View>
          </View>
          <View
            style={
              Array [
                Object {
                  "flex": 1,
                  "flexDirection": "column",
                  "justifyContent": "center",
                },
                Object {
                  "marginLeft": 12,
                },
              ]
            }
          >
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              numberOfLines={2}
              style={
                Array [
                  Object {
                    "fontFamily": ".SFUIDisplay",
                  },
                  Object {
                    "color": "#2D3B45",
                    "fontSize": 16,
                  },
                  Array [
                    Object {
                      "fontWeight": "600",
                    },
                  ],
                  Object {
                    "fontFamily": ".SFUIDisplay-semibold",
                  },
                ]
              }
            >
              learn to write code
            </Text>
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Array [
                  Object {
                    "fontFamily": ".SFUIDisplay",
                  },
                  Object {
                    "color": "#2D3B45",
                    "fontSize": 16,
                  },
                  Array [
                    Object {
                      "fontSize": 14,
                      "paddingTop": 2,
                    },
                    Object {
                      "marginBottom": 8,
                    },
                    Object {
                      "color": "#8B969E",
                    },
                  ],
                  Object {
                    "fontFamily": ".SFUIDisplay",
                  },
                ]
              }
            >
              Not Submitted
            </Text>
          </View>
        </View>
      </TouchableHighlight>
    </item>
  </list>
</Screen>
`;

exports[`ContextCard renders error if an error occured 1`] = `
<Screen
  navBarStyle="dark"
  rightBarButtons={
    Array [
      Object {
        "accessibilityLabel": "Email Contact",
        "action": [Function],
        "image": Object {
          "testUri": "../../../src/images/mail-small.png",
        },
        "testID": "context-card.email-contact",
      },
    ]
  }
>
  <ErrorView
    error={[Error: oh no an error happened]}
  />
</Screen>
`;

exports[`ContextCard renders for a non student 1`] = `
<Screen
  navBarStyle="dark"
  rightBarButtons={
    Array [
      Object {
        "accessibilityLabel": "Email Contact",
        "action": [Function],
        "image": Object {
          "testUri": "../../../src/images/mail-small.png",
        },
        "testID": "context-card.email-contact",
      },
    ]
  }
  subtitle="Learn React Native"
  title="Donald Trump"
>
  <list />
</Screen>
`;

exports[`ContextCard renders for a user that cannot view analytics 1`] = `
<Screen
  navBarStyle="dark"
  rightBarButtons={
    Array [
      Object {
        "accessibilityLabel": "Email Contact",
        "action": [Function],
        "image": Object {
          "testUri": "../../../src/images/mail-small.png",
        },
        "testID": "context-card.email-contact",
      },
    ]
  }
  subtitle="Learn React Native"
  title="Donald Trump"
>
  <list />
</Screen>
`;

exports[`ContextCard renders if there is no enrollment 1`] = `
<Screen
  navBarStyle="dark"
  rightBarButtons={
    Array [
      Object {
        "accessibilityLabel": "Email Contact",
        "action": [Function],
        "image": Object {
          "testUri": "../../../src/images/mail-small.png",
        },
        "testID": "context-card.email-contact",
      },
    ]
  }
  subtitle="Learn React Native"
  title="Donald Trump"
>
  <list>
    <item>
      <TouchableHighlight
        accessibilityLabel={undefined}
        accessibilityTraits={
          Array [
            "button",
          ]
        }
        onPress={[Function]}
        style={
          Array [
            undefined,
            Object {
              "borderBottomColor": "#C7CDD1",
              "borderBottomWidth": 0.5,
            },
          ]
        }
        testID="user-submission-row.cell-1"
      >
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "backgroundColor": "white",
                "flex": 1,
                "flexDirection": "row",
                "minHeight": 54,
                "paddingBottom": 12,
                "paddingLeft": 16,
                "paddingRight": 16,
                "paddingTop": 12,
              },
              Object {
                "backgroundColor": "white",
              },
            ]
          }
        >
          <View
            style={
              Object {
                "alignSelf": "flex-start",
              }
            }
            testID="user-submission-row-icon-published-1.icon-img"
          >
            <View
              accessibilityLabel="Published"
              style={
                Object {
                  "alignItems": "center",
                  "flex": 0,
                }
              }
            >
              <Image
                resizeMode="cover"
                source={
                  Object {
                    "testUri": "../../../src/images/course/Assignment.png",
                  }
                }
                style={
                  Array [
                    false,
                    Object {
                      "minHeight": 24,
                      "minWidth": 24,
                    },
                  ]
                }
                testID="access-icon-image"
              />
              <View
                style={
                  Object {
                    "alignItems": "center",
                    "backgroundColor": "white",
                    "borderRadius": 8,
                    "bottom": -6,
                    "height": 16,
                    "justifyContent": "center",
                    "position": "absolute",
                    "right": -5,
                    "width": 16,
                  }
                }
              >
                <Image
                  source={
                    Object {
                      "testUri": "../../../src/images/publish-small.png",
                    }
                  }
                  style={
                    Object {
                      "height": 12,
                      "tintColor": "#00AC18",
                      "width": 12,
                    }
                  }
                  testID="access-icon-icon"
                />
              </View>
            </View>
          </View>
          <View
            style={
              Array [
                Object {
                  "flex": 1,
                  "flexDirection": "column",
                  "justifyContent": "center",
                },
                Object {
                  "marginLeft": 12,
                },
              ]
            }
          >
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              numberOfLines={2}
              style={
                Array [
                  Object {
                    "fontFamily": ".SFUIDisplay",
                  },
                  Object {
                    "color": "#2D3B45",
                    "fontSize": 16,
                  },
                  Array [
                    Object {
                      "fontWeight": "600",
                    },
                  ],
                  Object {
                    "fontFamily": ".SFUIDisplay-semibold",
                  },
                ]
              }
            >
              learn to write code
            </Text>
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Array [
                  Object {
                    "fontFamily": ".SFUIDisplay",
                  },
                  Object {
                    "color": "#2D3B45",
                    "fontSize": 16,
                  },
                  Array [
                    Object {
                      "fontSize": 14,
                      "paddingTop": 2,
                    },
                    Object {
                      "marginBottom": 8,
                    },
                    Object {
                      "color": "#8B969E",
                    },
                  ],
                  Object {
                    "fontFamily": ".SFUIDisplay",
                  },
                ]
              }
            >
              Not Submitted
            </Text>
          </View>
        </View>
      </TouchableHighlight>
    </item>
  </list>
</Screen>
`;

exports[`ContextCard renders if there is no section in the enrollment 1`] = `
<Screen
  navBarStyle="dark"
  rightBarButtons={
    Array [
      Object {
        "accessibilityLabel": "Email Contact",
        "action": [Function],
        "image": Object {
          "testUri": "../../../src/images/mail-small.png",
        },
        "testID": "context-card.email-contact",
      },
    ]
  }
  subtitle="Learn React Native"
  title="Donald Trump"
>
  <list>
    <item>
      <TouchableHighlight
        accessibilityLabel={undefined}
        accessibilityTraits={
          Array [
            "button",
          ]
        }
        onPress={[Function]}
        style={
          Array [
            undefined,
            Object {
              "borderBottomColor": "#C7CDD1",
              "borderBottomWidth": 0.5,
            },
          ]
        }
        testID="user-submission-row.cell-1"
      >
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "backgroundColor": "white",
                "flex": 1,
                "flexDirection": "row",
                "minHeight": 54,
                "paddingBottom": 12,
                "paddingLeft": 16,
                "paddingRight": 16,
                "paddingTop": 12,
              },
              Object {
                "backgroundColor": "white",
              },
            ]
          }
        >
          <View
            style={
              Object {
                "alignSelf": "flex-start",
              }
            }
            testID="user-submission-row-icon-published-1.icon-img"
          >
            <View
              accessibilityLabel="Published"
              style={
                Object {
                  "alignItems": "center",
                  "flex": 0,
                }
              }
            >
              <Image
                resizeMode="cover"
                source={
                  Object {
                    "testUri": "../../../src/images/course/Assignment.png",
                  }
                }
                style={
                  Array [
                    false,
                    Object {
                      "minHeight": 24,
                      "minWidth": 24,
                    },
                  ]
                }
                testID="access-icon-image"
              />
              <View
                style={
                  Object {
                    "alignItems": "center",
                    "backgroundColor": "white",
                    "borderRadius": 8,
                    "bottom": -6,
                    "height": 16,
                    "justifyContent": "center",
                    "position": "absolute",
                    "right": -5,
                    "width": 16,
                  }
                }
              >
                <Image
                  source={
                    Object {
                      "testUri": "../../../src/images/publish-small.png",
                    }
                  }
                  style={
                    Object {
                      "height": 12,
                      "tintColor": "#00AC18",
                      "width": 12,
                    }
                  }
                  testID="access-icon-icon"
                />
              </View>
            </View>
          </View>
          <View
            style={
              Array [
                Object {
                  "flex": 1,
                  "flexDirection": "column",
                  "justifyContent": "center",
                },
                Object {
                  "marginLeft": 12,
                },
              ]
            }
          >
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              numberOfLines={2}
              style={
                Array [
                  Object {
                    "fontFamily": ".SFUIDisplay",
                  },
                  Object {
                    "color": "#2D3B45",
                    "fontSize": 16,
                  },
                  Array [
                    Object {
                      "fontWeight": "600",
                    },
                  ],
                  Object {
                    "fontFamily": ".SFUIDisplay-semibold",
                  },
                ]
              }
            >
              learn to write code
            </Text>
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Array [
                  Object {
                    "fontFamily": ".SFUIDisplay",
                  },
                  Object {
                    "color": "#2D3B45",
                    "fontSize": 16,
                  },
                  Array [
                    Object {
                      "fontSize": 14,
                      "paddingTop": 2,
                    },
                    Object {
                      "marginBottom": 8,
                    },
                    Object {
                      "color": "#8B969E",
                    },
                  ],
                  Object {
                    "fontFamily": ".SFUIDisplay",
                  },
                ]
              }
            >
              Not Submitted
            </Text>
          </View>
        </View>
      </TouchableHighlight>
    </item>
  </list>
</Screen>
`;

exports[`ContextCard shows points values when there is no grade 1`] = `
<Screen
  navBarStyle="dark"
  rightBarButtons={
    Array [
      Object {
        "accessibilityLabel": "Email Contact",
        "action": [Function],
        "image": Object {
          "testUri": "../../../src/images/mail-small.png",
        },
        "testID": "context-card.email-contact",
      },
    ]
  }
  subtitle="Learn React Native"
  title="Donald Trump"
>
  <list>
    <item>
      <TouchableHighlight
        accessibilityLabel={undefined}
        accessibilityTraits={
          Array [
            "button",
          ]
        }
        onPress={[Function]}
        style={
          Array [
            undefined,
            Object {
              "borderBottomColor": "#C7CDD1",
              "borderBottomWidth": 0.5,
            },
          ]
        }
        testID="user-submission-row.cell-1"
      >
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "backgroundColor": "white",
                "flex": 1,
                "flexDirection": "row",
                "minHeight": 54,
                "paddingBottom": 12,
                "paddingLeft": 16,
                "paddingRight": 16,
                "paddingTop": 12,
              },
              Object {
                "backgroundColor": "white",
              },
            ]
          }
        >
          <View
            style={
              Object {
                "alignSelf": "flex-start",
              }
            }
            testID="user-submission-row-icon-published-1.icon-img"
          >
            <View
              accessibilityLabel="Published"
              style={
                Object {
                  "alignItems": "center",
                  "flex": 0,
                }
              }
            >
              <Image
                resizeMode="cover"
                source={
                  Object {
                    "testUri": "../../../src/images/course/Assignment.png",
                  }
                }
                style={
                  Array [
                    false,
                    Object {
                      "minHeight": 24,
                      "minWidth": 24,
                    },
                  ]
                }
                testID="access-icon-image"
              />
              <View
                style={
                  Object {
                    "alignItems": "center",
                    "backgroundColor": "white",
                    "borderRadius": 8,
                    "bottom": -6,
                    "height": 16,
                    "justifyContent": "center",
                    "position": "absolute",
                    "right": -5,
                    "width": 16,
                  }
                }
              >
                <Image
                  source={
                    Object {
                      "testUri": "../../../src/images/publish-small.png",
                    }
                  }
                  style={
                    Object {
                      "height": 12,
                      "tintColor": "#00AC18",
                      "width": 12,
                    }
                  }
                  testID="access-icon-icon"
                />
              </View>
            </View>
          </View>
          <View
            style={
              Array [
                Object {
                  "flex": 1,
                  "flexDirection": "column",
                  "justifyContent": "center",
                },
                Object {
                  "marginLeft": 12,
                },
              ]
            }
          >
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              numberOfLines={2}
              style={
                Array [
                  Object {
                    "fontFamily": ".SFUIDisplay",
                  },
                  Object {
                    "color": "#2D3B45",
                    "fontSize": 16,
                  },
                  Array [
                    Object {
                      "fontWeight": "600",
                    },
                  ],
                  Object {
                    "fontFamily": ".SFUIDisplay-semibold",
                  },
                ]
              }
            >
              learn to write code
            </Text>
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Array [
                  Object {
                    "fontFamily": ".SFUIDisplay",
                  },
                  Object {
                    "color": "#2D3B45",
                    "fontSize": 16,
                  },
                  Array [
                    Object {
                      "fontSize": 14,
                      "paddingTop": 2,
                    },
                    Object {
                      "marginBottom": 8,
                    },
                    Object {
                      "color": "#8B969E",
                    },
                  ],
                  Object {
                    "fontFamily": ".SFUIDisplay",
                  },
                ]
              }
            >
              Not Submitted
            </Text>
          </View>
        </View>
      </TouchableHighlight>
    </item>
  </list>
</Screen>
`;

exports[`ContextCard shows the activity indicator when pending 1`] = `
<Screen
  navBarStyle="dark"
  rightBarButtons={
    Array [
      Object {
        "accessibilityLabel": "Email Contact",
        "action": [Function],
        "image": Object {
          "testUri": "../../../src/images/mail-small.png",
        },
        "testID": "context-card.email-contact",
      },
    ]
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
      }
    }
  >
    <ActivityIndicator
      animating={true}
      color="#999999"
      hidesWhenStopped={true}
      size="small"
      style={
        Object {
          "flex": 1,
        }
      }
    />
  </View>
</Screen>
`;
